--- a/style.css
+++ b/style.css
@@ -1,26 +1,8 @@
 nav {
   background-image: url(pexels-pix.jpg);
-  padding: 20px;
-  margin-top: 100px;
-  text-align: center;
-  font-family: Arial, Helvetica, sans-serif;
 }
 
-.nav-link {
-  padding: 20px;
+.nav-link,
+.navbar-brand {
   color: #000000;
-  font-size: x-large;
-}
-
-.nav-link:hover {
-  color: rgb(88, 85, 85, 0.7);
-}
-
-li {
-  display: inline-flex;
-}
-
-.contact {
-  padding: 4px;
-  text-align: center;
 }
