--- a/style.css
+++ b/style.css
@@ -16,11 +16,29 @@ nav {
   color: rgb(88, 85, 85, 0.7);
 }
 
-li {
+.nav-item {
   display: inline-flex;
 }
 
 .contact {
   padding: 4px;
   text-align: center;
+}
+
+.fieldsoA {
+  padding: 4px;
+  margin: 20px;
+}
+
+#fields {
+  padding: 4px;
+  font-size: x-large;
+}
+
+.underline {
+  text-decoration-line: underline;
+}
+
+.aboutme {
+  margin-top: 10px;
 }
